--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,80 +5,80 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-875.7KB/s(Youtube:不良林), server: 159.27.115.21, port: 64078, type: vmess, uuid: 477fb2a0-daf4-3041-b6f6-5de3f42ecc69, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.115.21}}
-  - {name: 🇨🇳 中国-7.05MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.81MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.03MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-606.9KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-6.19MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-898.8KB/s(Youtube:不良林), server: 62.216.91.229, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇨🇳 中国-311.3KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇫🇷 法国-1.60MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 台湾-1.09MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-875.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.03MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-606.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-898.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.09MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-875.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.03MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-606.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-898.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.09MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-875.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.03MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-606.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-898.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.09MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-606.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.09MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-875.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.03MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-606.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-898.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.09MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-875.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.03MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-606.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-898.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.09MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-875.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.03MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-606.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-898.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.09MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,11 +94,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-875.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.03MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-606.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-898.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.09MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
