--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.26MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.55MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-1.82MB/s(Youtube:不良林), server: 211.72.35.158, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-3.04MB/s(Youtube:不良林), server: 211.72.35.158, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.50MB/s(Youtube:不良林), server: 159.27.115.21, port: 64078, type: vmess, uuid: 477fb2a0-daf4-3041-b6f6-5de3f42ecc69, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.115.21}}
-  - {name: 🇺🇸 美国-1.74MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-821.9KB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.93MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-11.35MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.29MB/s(Youtube:不良林), server: 152.89.210.105, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
   - {name: 🇨🇳 中国-7.42MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 阿联酋-699.2KB/s(Youtube:不良林), server: 217.138.193.6, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-7.20MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.03MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.39MB/s(Youtube:不良林), server: 120.233.186.71, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.36MB/s(Youtube:不良林), server: 120.233.186.71, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.83MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-821.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.35MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
-      - 阿联酋-699.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-821.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.35MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
-      - 阿联酋-699.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-821.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.35MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
-      - 阿联酋-699.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.04MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-821.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.35MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
-      - 阿联酋-699.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-821.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.35MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
-      - 阿联酋-699.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-821.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.35MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
-      - 阿联酋-699.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-821.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.35MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
-      - 阿联酋-699.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
