--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-821.9KB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.93MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.29MB/s(Youtube:不良林), server: 152.89.210.105, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇨🇳 中国-7.42MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.20MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.03MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.39MB/s(Youtube:不良林), server: 120.233.186.71, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.36MB/s(Youtube:不良林), server: 120.233.186.71, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.83MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-6.63MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.60MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.47MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.42MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-2.64MB/s(Youtube:不良林), server: 211.72.35.158, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.68MB/s(Youtube:不良林), server: 120.233.186.204, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.97MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-2.94MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-8.53MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-329.4KB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-821.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-329.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-821.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-329.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-821.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-329.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-821.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-329.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-821.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-329.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-821.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-329.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-821.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-329.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
